--- a/GBH_Movies_Test/GBH_Movies_Test.iOS/GBH_Movies_Test.iOS.csproj
+++ b/GBH_Movies_Test/GBH_Movies_Test.iOS/GBH_Movies_Test.iOS.csproj
@@ -147,7 +147,7 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
+    <PackageReference Include="Xamarin.Forms" Version="3.2.0.729530-pre2" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
