--- a/GBH_Movies_Test/GBH_Movies_Test/GBH_Movies_Test.csproj
+++ b/GBH_Movies_Test/GBH_Movies_Test/GBH_Movies_Test.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="3.0.0.482510" />
+    <PackageReference Include="Xamarin.Forms" Version="3.2.0.729530-pre2" />
   </ItemGroup>
 
   <ItemGroup>
