--- a/GBH_Movies_Test/GBH_Movies_Test.Android/GBH_Movies_Test.Android.csproj
+++ b/GBH_Movies_Test/GBH_Movies_Test.Android/GBH_Movies_Test.Android.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MonkeyCache">
+      <Version>0.1.0.10-beta</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.729530-pre2" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="27.0.2" />
     <PackageReference Include="Xamarin.Android.Support.v7.AppCompat" Version="27.0.2" />
