---- Repository Pattern implemented ---- Feat: DatabaseContext added. Feat: DBRepository added. Feat: IDBReposository added. Feat: EntityFrameworkCore.SqlLite nuget Package added.

--- a/GBH_Movies_Test/GBH_Movies_Test.Android/GBH_Movies_Test.Android.csproj
+++ b/GBH_Movies_Test/GBH_Movies_Test.Android/GBH_Movies_Test.Android.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
+      <Version>2.1.1</Version>
+    </PackageReference>
     <PackageReference Include="MonkeyCache">
       <Version>0.1.0.10-beta</Version>
     </PackageReference>
