--- a/GBH_Movies_Test/GBH_Movies_Test/GBH_Movies_Test.csproj
+++ b/GBH_Movies_Test/GBH_Movies_Test/GBH_Movies_Test.csproj
@@ -5,14 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.1" />
     <PackageReference Include="MonkeyCache" Version="0.1.0.10-beta" />
     <PackageReference Include="Unity" Version="5.8.6" />
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.729530-pre2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
-    <Folder Include="Services\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
 </Project>
