--- a/GBH_Movies_Test/GBH_Movies_Test.iOS/GBH_Movies_Test.iOS.csproj
+++ b/GBH_Movies_Test/GBH_Movies_Test.iOS/GBH_Movies_Test.iOS.csproj
@@ -150,6 +150,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
       <Version>2.1.1</Version>
     </PackageReference>
+    <PackageReference Include="System.Memory">
+      <Version>4.5.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.729530-pre2" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
