--- a/GBH_Movies_Test/GBH_Movies_Test/GBH_Movies_Test.csproj
+++ b/GBH_Movies_Test/GBH_Movies_Test/GBH_Movies_Test.csproj
@@ -5,9 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.1" />
     <PackageReference Include="MonkeyCache" Version="0.1.0.10-beta" />
+    <PackageReference Include="System.Memory" Version="4.5.1" />
     <PackageReference Include="Unity" Version="5.8.6" />
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.729530-pre2" />
   </ItemGroup>
