--- a/GBH_Movies_Test/GBH_Movies_Test.iOS/GBH_Movies_Test.iOS.csproj
+++ b/GBH_Movies_Test/GBH_Movies_Test.iOS/GBH_Movies_Test.iOS.csproj
@@ -154,6 +154,9 @@
       <Version>4.5.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.729530-pre2" />
+    <PackageReference Include="Xamarin.LiveReload">
+      <Version>0.3.27</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
