--- a/GBH_Movies_Test/GBH_Movies_Test.Android/GBH_Movies_Test.Android.csproj
+++ b/GBH_Movies_Test/GBH_Movies_Test.Android/GBH_Movies_Test.Android.csproj
@@ -71,6 +71,9 @@
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe">
       <Version>4.5.1</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Connectivity">
+      <Version>3.2.0</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugins.Settings">
       <Version>3.1.1</Version>
     </PackageReference>
@@ -88,6 +91,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ToastAlert.cs" />
     <Compile Include="SplashScreen.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -118,7 +122,6 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
     <Folder Include="Resources\drawable\" />
-    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GBH_Movies_Test\GBH_Movies_Test.csproj">
