--- a/GBH_Movies_Test/GBH_Movies_Test/GBH_Movies_Test.csproj
+++ b/GBH_Movies_Test/GBH_Movies_Test/GBH_Movies_Test.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MonkeyCache.FileStore" Version="0.1.0.10-beta" />
     <PackageReference Include="System.Memory" Version="4.5.1" />
     <PackageReference Include="Unity" Version="5.8.6" />
+    <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
     <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.3.840" />
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.729530-pre2" />
