--- a/SSFR_Movies/SSFR_Movies.Android/Properties/AndroidManifest.xml
+++ b/SSFR_Movies/SSFR_Movies.Android/Properties/AndroidManifest.xml
@@ -2,5 +2,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionName="1.0" package="com.sergiojoelferreras.SSFR_Movies" android:installLocation="auto" android:versionCode="1">
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<application android:hardwareAccelerated="true" android:label="SSFR Movies"></application>
+	<application android:hardwareAccelerated="true" android:label="SSFR Movies" android:icon="@drawable/Icon"></application>
 </manifest>
