--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.8.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.8.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.1" />
     <PackageReference Include="MonkeyCache" Version="0.1.0.10-beta" />
     <PackageReference Include="MonkeyCache.FileStore" Version="0.1.0.10-beta" />
@@ -17,7 +19,6 @@
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.3.840" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.3.840" />
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.729530-pre2" />
-    <PackageReference Include="Xamarin.LiveReload" Version="0.3.27" />
   </ItemGroup>
 
   <ItemGroup>
