--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -25,6 +25,9 @@
     <EmbeddedResource Update="ResourceDictionaries\GenResourceDictionary.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\About.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\AllMoviesPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
