--- a/SSFR_Movies/SSFR_Movies.Android/Properties/AndroidManifest.xml
+++ b/SSFR_Movies/SSFR_Movies.Android/Properties/AndroidManifest.xml
@@ -2,5 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.sergiojoelferreras.SSFR_Movies" android:installLocation="auto" android:versionName="1.0.1" android:versionCode="4">
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="27" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  	<uses-permission android:name="android.permission.INTERNET" />
+  <activity android:name="com.google.android.gms.ads.AdActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:theme="@android:style/Theme.Translucent" />
 	<application android:hardwareAccelerated="true" android:label="SSFR Movies" android:icon="@drawable/Icon"></application>
 </manifest>
