VNext: 1.0.3 -> Feat: Now infinite text motion animation in the Title label of a movie result. Refactor: now Favorite Movie star notification  consume less processing, and enabled again..

--- a/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
+++ b/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
@@ -138,6 +138,11 @@
     <PackageReference Include="Xamarin.GooglePlayServices.Ads.Lite">
       <Version>70.1501.0-preview2</Version>
     </PackageReference>
+    <PackageReference Include="XFControls">
+      <Version>1.0.0.6</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CustomRenderers\AdViewRenderer.cs" />
