--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -18,7 +18,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.5.867-pre" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.4.5.867-pre" />
-    <PackageReference Include="Xamarin.Forms" Version="4.0.1.102444-nightly" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.62955-pre2" />
   </ItemGroup>
 
   <ItemGroup>
