refactor: Update nuget packages.

--- a/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
+++ b/SSFR_Movies/SSFR_Movies.Android/SSFR_Movies.Android.csproj
@@ -104,7 +104,7 @@
       <Version>2.2.3</Version>
     </PackageReference>
     <PackageReference Include="Splat">
-      <Version>6.1.7</Version>
+      <Version>8.0.0-dotnet3-preview.5</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugins.Settings">
       <Version>4.0.0.10-beta</Version>
