--- a/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
+++ b/SSFR_Movies/SSFR_Movies/SSFR_Movies.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="Realm.Database" Version="3.4.0" />
     <PackageReference Include="Realm.DataBinding" Version="1.2.0" />
     <PackageReference Include="Refractored.XamForms.PullToRefresh" Version="2.2.3" />
-    <PackageReference Include="Splat" Version="6.1.7" />
+    <PackageReference Include="Splat" Version="8.0.0-dotnet3-preview.5" />
     <PackageReference Include="Xam.Plugins.Settings" Version="4.0.0.10-beta" />
     <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.5.867-pre" />
