--- a/SSFR_Movies/SSFR_Movies.Android/Properties/AndroidManifest.xml
+++ b/SSFR_Movies/SSFR_Movies.Android/Properties/AndroidManifest.xml
@@ -5,5 +5,5 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<activity android:name="com.google.android.gms.ads.AdActivity" android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:theme="@android:style/Theme.Translucent" />
-	<application android:largeHeap="true" android:hardwareAccelerated="true" android:label="SSFR Movies" android:icon="@drawable/Icon1"></application>
+	<application android:extractNativeLibs="false" android:largeHeap="true" android:hardwareAccelerated="true" android:label="SSFR Movies" android:icon="@drawable/Icon1"></application>
 </manifest>
