refactor: Enable Proguard.

--- a/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
+++ b/SSFR_Movies/SSFR_Movies.Android/Proguard.cfg
@@ -1,10 +1,28 @@
 -keep class com.bumptech.glide.load.engine.** { *; }
 -dontwarn com.bumptech.glide.load.engine.*
-
 -keep class com.google.android.gms.internal.ads.** { *; }
 -dontwarn com.google.android.gms.internal.ads.*
-
 -keep class com.google.android.gms.internal.stable.** { *; }
 -dontwarn com.google.android.gms.internal.stable.*
-
-
+-keep class com.htetznaing.xgetter.** { *; }
+-dontwarn com.htetznaing.xgetter.*
+-keep class com.android.volley.** { *; }
+-dontwarn com.android.volley.*
+-keep class at.huber.youtubeExtractor.YouTubeExtractor {*; }
+-dontwarn at.huber.youtubeExtractor.YouTubeExtractor
+-keep class org.jsoup.** { *; }
+-dontwarn org.jsoup.*
+-keep class org.jsoup.nodes.Document { *; }
+-dontwarn org.jsoup.nodes.Document
+-keep class org.jsoup.nodes.Document { *; }
+-dontwarn org.jsoup.nodes.Document
+-keep class org.jsoup.select.Elements { *; }
+-dontwarn org.jsoup.select.Elements
+-keep class org.jsoup.nodes.Element { *; }
+-dontwarn org.jsoup.nodes.Element
+-keep class com.google.gson.Gson { *; }
+-dontwarn com.google.gson.Gson
+-keep class com.android.volley.toolbox.StringRequest { *; }
+-dontwarn com.android.volley.toolbox.StringRequest
+-keep class com.android.volley.Response { *; }
+-dontwarn com.android.volley.Response
